# RIRV_CPP

./: .gitignore  CMakeLists.txt
src/: logger.h  main.cpp  postprocessing.cpp  postprocessing.h  preprocessing.cpp  preprocessing.h  preprocessing_gpu.cu  preprocessing_gpu.h  renderer.cpp  renderer.h  types.h
